fix a bug in responsive when nav is clicked by changing z-index

--- a/src/components/ProductCategories/ProductCategories.module.scss
+++ b/src/components/ProductCategories/ProductCategories.module.scss
@@ -72,4 +72,7 @@
   .products {
     flex-direction: column;
   }
+  .product {
+    margin-right: 0;
+  }
 }
