--- a/src/components/SecondaryNavigation/SecondaryNavigation.module.scss
+++ b/src/components/SecondaryNavigation/SecondaryNavigation.module.scss
@@ -156,7 +156,7 @@ Dropdown {
   .productDesc {
     text-align: center;
     width: convertFont(346);
-    z-index: 1000;
+    z-index: 100;
 
     h1 {
       margin: 1rem 0;
